--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <form id="todos-form" class="d-flex align-center gap-1">
-            <input type="text">
+            <input type="text" id="todo-text">
             <input type="submit" value="+">
         </form>
         <ul id="todos">
