--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,25 @@
     <link rel="stylesheet" href="style.css">
     <!-- jQuery CDN : Content Delivey Network-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="main.js"></script>
+
 </head>
 
 <body>
+    <div id="modal" class="hide">
+        <div class="content">
+            <h1>modify todo</h1>
+            <p>할일 항목 수정</p>
+            <form id="edit-form">
+                <div>
+                    <label for="prev-todo">기존</label>
+                    <input type="text" name="prev-todo" id="prev-todo" disabled="disabled">
+                    <label for="next-todo">변경</label>
+                    <input type="text" name="next-todo" id="next-todo">
+                </div>
+                <div class="d-flex flex-end"><input type="submit" value="수정"></div>
+            </form>
+        </div>
+    </div>
     <header>
         <h1>Todos App</h1>
         <div class="info">
@@ -24,7 +39,7 @@
     <main>
         <form id="todos-form" class="d-flex align-center gap-1">
             <input type="text" id="todo-text">
-            <input type="submit" value="+">
+            <input type="submit" value="등록" class="add-submit">
         </form>
         <ul id="todos">
             <p>loading...</p>
@@ -35,5 +50,5 @@
         <p>copyright&copy; todos-lab</p>
     </footer>
 </body>
-
+<script src="main.js"></script>
 </html>
