할일 수정 UI 취소 버튼

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,10 @@
                     <label for="next-todo">변경</label>
                     <input type="text" name="next-todo" id="next-todo">
                 </div>
-                <div class="d-flex flex-end"><input type="submit" value="수정"></div>
+                <div class="d-flex flex-end">
+                    <input type="submit" value="수정">
+                    <input type="button" value="취소" id="hide-modal">
+                </div>
             </form>
         </div>
     </div>
