--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex flex-end">
+                <div class="edit-btn d-flex flex-end">
                     <input type="submit" value="수정">
                     <input type="button" value="취소" id="hide-modal">
                 </div>
